unpackaged/main/default/objects/d_wh__Callout_Sequence_Item__c/d_wh__Callout_Sequence_Item__c.object-meta.xml
<CustomObject>
    <label>Callout Sequence Item</label>
    <nameField>
        <label>Callout Sequence Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Callout Sequence Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>