unpackaged/main/default/objects/d_wh__Callout_Sequence_Item__c/fields/d_wh__Callout_Sequence__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Callout_Sequence__c</fullName>
    <label>Callout Sequence</label>
    <referenceTo>d_wh__Callout_Sequence__c</referenceTo>
    <relationshipLabel>Callout Sequence Items</relationshipLabel>
    <relationshipName>Callout_Sequence_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>