unpackaged/main/default/objects/d_wh__Callout_Sequence_Item__c/fields/d_wh__Callout_Template__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Callout_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Callout Template</label>
    <referenceTo>d_wh__Callout_Template__c</referenceTo>
    <relationshipLabel>Callout Sequence Items</relationshipLabel>
    <relationshipName>Callout_Sequence_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>