unpackaged/main/default/objects/d_wh__Callout_Sequence_Item__c/fields/d_wh__Conditions__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Conditions__c</fullName>
    <label>Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>