unpackaged/main/default/objects/d_wh__Callout_Sequence_Item__c/fields/d_wh__Main_Record_Reference__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Main_Record_Reference__c</fullName>
    <label>Main Record Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>