unpackaged/main/default/objects/d_wh__Callout_Sequence_Item__c/fields/d_wh__Main_Record_Reference_Type__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Main_Record_Reference_Type__c</fullName>
    <label>Main Record Reference Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Same Record</fullName>
            </value>
            <value>
                <fullName>Related Record</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>