unpackaged/main/default/objects/d_wh__Callout_Sequence_Item__c/fields/d_wh__Previous_Callout_Sequence_Item__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Previous_Callout_Sequence_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Callout Sequence Item</label>
    <referenceTo>d_wh__Callout_Sequence_Item__c</referenceTo>
    <relationshipLabel>Next Callout Sequence Items</relationshipLabel>
    <relationshipName>Next_Callout_Sequence_Items</relationshipName>
    <type>Lookup</type>
</CustomField>